<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">策略期货</string>

    <string name="string_contract">合约</string>
    <string name="string_strategy">策略</string>
    <string name="string_transaction">交易</string>
    <string name="string_setting">设置</string>

    <string name="string_optional_shares">自选</string>
    <string name="string_edit">编辑</string>
    <string name="string_search">搜索</string>

    <string name="contract_name">合约名</string>
    <string name="contract_latest_price">最新价格</string>
    <string name="contract_change">涨跌</string>

    <string name="string_login">交易登录</string>
    <string name="string_choose_server">选择服务器</string>
    <string name="server_10000">电信</string>
    <string name="server_10010">联通</string>
    <string name="string_account">资金账号</string>
    <string name="string_remember">记住</string>
    <string name="string_password">密码</string>
    <string name="password_show">可见</string>
    <string name="string_validate_code">验证码</string>
    <string name="action_sign_in">登录</string>

    <string name="strategy_operation">操作</string>
    <string name="strategy_long_open">多开</string>
    <string name="strategy_long_close">多平</string>
    <string name="strategy_short_open">空开</string>
    <string name="strategy_short_close">空平</string>
    <string name="strategy_op_add">新增</string>


    <string name="strategy_day">日均线趋势</string>
    <string name="strategy_hour">60分钟均线趋势</string>
    <string name="strategy_5min">5分钟均线趋势</string>
    <string name="strategy_min">1分钟MACD线趋势</string>

    <string name="tendency_long">向上</string>
    <string name="tendency_short">向下</string>
    <string name="tendency_golden">金叉</string>
    <string name="tendency_dead">死叉</string>

    <string name="tendency_memo">"趋势向上：价格在均线以上，均线走势向上 \n趋势向下：价格在均线之下，均线走势向下 \n \n<xliff:g id="STRATEGY">%s</xliff:g>"</string>
    <string name="title_activity_instrument">InstrumentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="long_price">买价</string>
    <string name="short_price">卖价</string>
    <string name="position">持仓</string>

</resources>
