<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvOptionalShares"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/string_login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <!--region Server-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="1">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/string_choose_server" />

            <RadioGroup
                android:id="@+id/rgServer"
                style="@style/contractStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:checkedButton="@+id/rbServer10000"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbServer10000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="0.5"
                    android:text="@string/server_10000" />

                <RadioButton
                    android:id="@+id/rbServer10010"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/server_10010" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />
        <!--endregion-->

        <!--region UserId-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:text="@string/string_account" />

            <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.48"
                android:hint="@string/string_account"
                android:inputType="number"
                android:completionHint="@string/string_account"
                android:completionThreshold="1"
                android:ems="5"
                android:id="@+id/actvUserId"/>

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.22"
                android:text="@string/string_remember"
                android:checked="true"
                android:id="@+id/ckRemember"/>

        </LinearLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />
        <!--endregion-->

        <!--region Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/string_password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.48"
                android:hint="@string/string_password"
                android:inputType="textPassword" />
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.22"
                android:text="@string/password_show"
                android:id="@+id/ckVisible"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />
        <!--endregion-->

        <!--region ValidationCode-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/string_validate_code" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/string_validate_code"
                android:inputType="text"
                android:layout_weight="0.48"
                android:id="@+id/etValidateCode"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.22"
                android:src="@drawable/validate_code"
                android:contentDescription="@string/string_validate_code"
                android:id="@+id/imgValidateCode"
                />
        </LinearLayout>
        <!--endregion-->

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:layout_margin="10dp"
        android:id="@+id/btnLogin"/>

</LinearLayout>