<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InstrumentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08">

        <TextView
            android:id="@+id/tvInsName"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvInsId"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.16"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvLastPrice"
            style="@style/contractStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/contractStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/long_price" />

                <TextView
                    android:id="@+id/tvLongPrice"
                    style="@style/contractStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35" />


                <TextView
                    android:id="@+id/tvLongPosition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    style="@style/contractStyle"
                    android:layout_weight="0.35" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <TextView
                    style="@style/contractStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="@string/short_price" />

                <TextView
                    android:id="@+id/tvShortPrice"
                    style="@style/contractStyle"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_weight="0.35" />


                <TextView
                    android:id="@+id/tvShortPosition"
                    style="@style/contractStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvChange"
            style="@style/contractStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <TextView
            android:id="@+id/tvChangePercent"
            style="@style/contractStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <TextView
            style="@style/contractStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.18"
            android:text="@string/position" />

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/contractStyle"
            android:layout_weight="0.21" />

        <TextView
            android:id="@+id/tvPositionAdd"
            style="@style/contractStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.21" />
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tbLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08" />

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/mChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" />


</LinearLayout>